--- a/lab_work2024-2025/readme
+++ b/lab_work2024-2025/readme
@@ -1,3 +1,6 @@
 This link is for downloading the database
 
 https://www.kaggle.com/datasets/uttamrai7/2023-2024tripdata
+
+To work with the database, you need to install the library
+Sqlalchemy
